# utils-standard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
doc/api/html/modules/: index.html
doc/api/markdown/: .pages  documentation.md  utils.md
squardot_utils_standard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils_standard/data/: colors_constants.md
utils_standard/modules/: utils.py
